first debugging exercise

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <button onclick="testDebugging()">Click me!</button>
+
     Hello!
+    <script src="script.js"></script>
   </body>
 </html>
