debugging to do

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <button onclick="testDebugging()">Click me!</button>
 
-    Hello!
-    <script src="script.js"></script>
+<html>
+  <head>
+    <title>Task app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='assets/css/style.css' rel='stylesheet' />
+  </head>
+
+  <body>
+    <div class='app-wrapper'>
+        <div class='add-task-form'>
+            <div class='input-groups'>
+                <input id='taskName' type='text' name='task-name' value='' placeholder='Task name...' />
+                <input id='taskDescription' type='text' name='task-description' value='' placeholder='Task description...' />
+            </div>
+            <button id='addTask' class='btn btn-add'>Add Task</button>
+        </div>
+
+        <div class='task-card-wrapper' id='taskCardWrapper'>
+        </div>
+    </div>
+
+    <script src='assets/js/main.js'></script>
   </body>
 </html>
+
