--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <button onclick="testDebugging()">Click me!</button>
 
     Hello!
+
+    <button onclick="myProblem(arr1)">Return doubled array</button>
     <script src="script.js"></script>
   </body>
 </html>
