Added initial folders for data structures

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
-    <button onclick="testDebugging()">Click me!</button>
-
-    Hello!
+    <h1>Data Structures</h1>
+    <div class="card">
+        <button><a href="/1.Array/index.html">1. Array</a></button>
+        <button><a href="/2.Linked lists/index.html">2. Linked lists</a></button>
+        <button><a href="/3.Stack/index.html">3. Stack</a></button>
+        <button><a href="/4.Queue/index.html">4. Queue</a></button>
+        <button><a href="/5.Tree/index.html">5. Tree</a></button>
+        <button><a href="/6.Graph/index.html">6. Graph</a></button>
+        <button><a href="/7.Algorithms/index.html">7. Algorithms</a></button>
+        <button><a href="/8.DOM/index.html">8. DOM</a></button>
+        <button><a href="/9.Ajax/index.html">9. Ajax</a></button>
+        <button><a href="/10.Bubbling/index.html">10. Bubbling</a></button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
