Data structure - Array

--- a/1.Array/index.html
+++ b/1.Array/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <button><a href="/index.html">Go Home</a></button>
+
+
+
+
+
+
+    <script src="/1.Array/main.js"></script>
 </body>
 </html>
