--- a/2.Linked lists/index.html
+++ b/2.Linked lists/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Linked Lists</title>
-</head>
-<body>
+  </head>
+  <body>
     <button><a href="/index.html">Go Home</a></button>
-</body>
+
+    <script src="main.js"></script>
+  </body>
 </html>
