AJAX aded country coat of arms, flags, name, population

--- a/9.Ajax/index.html
+++ b/9.Ajax/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/9.Ajax/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/9.Ajax/style.css" />
     <title>Ajax</title>
-</head>
-<body>
-    <button><a href="/index.html">Go Home</a></button>
-    <button onclick="getCountries()" id="country-card-event">Get Countries</button>
-    <!-- <button id="country-card-event">Get Countries2</button> -->
-</body>
+  </head>
+  <body>
+    <div></div>
+    <div class="buttons" style="width: 100%;">
+      <button><a href="/index.html">Go Home</a></button>
+      <button id="country-card-event">Get Countries</button>
+    </div>
 
-<script src="/9.Ajax/main.js"></script>
+    <div></div>
+  </body>
+
+  <script src="/9.Ajax/main.js"></script>
 </html>
